WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108366
REGRESSION(140504): pure CSE no longer matches things, 10% regression on Kraken
https://bugs.webkit.org/show_bug.cgi?id=108366
Summary
REGRESSION(140504): pure CSE no longer matches things, 10% regression on Kraken
Filip Pizlo
Reported
2013-01-30 12:21:00 PST
Patch forthcoming.
Attachments
the patch
(4.59 KB, patch)
2013-01-30 12:31 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-01-30 12:31:00 PST
Created
attachment 185539
[details]
the patch
Geoffrey Garen
Comment 2
2013-01-30 12:33:05 PST
Comment on
attachment 185539
[details]
the patch r=me
Mark Hahnenberg
Comment 3
2013-01-30 12:35:07 PST
r=me too!
Filip Pizlo
Comment 4
2013-01-30 13:04:05 PST
Landed in
http://trac.webkit.org/changeset/141301
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug